--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -389,7 +389,7 @@ a {
 
                         &:checked + .favorite-icon {
                             .filled-heart {
-                                display: inline;
+                                opacity: 1;
                                 background: $gradient-heart;
                                 -webkit-background-clip: text;
                                 background-clip: text;
@@ -397,19 +397,22 @@ a {
                             }
 
                             .empty-heart {
-                                display: none;
+                                opacity: 0;
                             }
                         }
                     }
 
                     &-icon {
                         position: absolute;
-                        bottom: 10px;
-                        right: 10px;
+                        top: 85%;
+                        right: 25px;
                         font-size: 1.5rem;
                         color: #101010;
                         cursor: pointer;
                         transition: all 0.3s ease;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
 
                         &:hover {
                             color: $color-accent;
@@ -417,14 +420,15 @@ a {
 
                         .empty-heart, .filled-heart {
                             transition: all 0.3s ease;
+                            position: absolute;
                         }
 
                         .empty-heart {
-                            display: inline;
+                            opacity: 1;
                         }
 
                         .filled-heart {
-                            display: none;
+                            opacity: 0;
                         }
                     }
                 }
